fix: wrap infotec dmi css in its class

--- a/src/components/displays/NewGTR/css/call-nre.less
+++ b/src/components/displays/NewGTR/css/call-nre.less
@@ -1,4 +1,4 @@
-.call-nre {
+.dot-matrix .call-nre {
   text-align: center;
 
   .row {
