--- a/src/components/displays/NewGTR/css/clock.less
+++ b/src/components/displays/NewGTR/css/clock.less
@@ -1,93 +1,115 @@
-@keyframes squash-out {
-  0% {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    opacity: 1;
-  }
-  80% {
-    clip-path: polygon(calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 100%, calc(var(--dot-width) * 4) 100%);
-    opacity: 1;
-  }
-  100% {
-    clip-path: polygon(calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 100%, calc(var(--dot-width) * 4) 100%);
-    opacity: 0;
-  }
-}
-
-@keyframes squash-in {
-  0% {
-    clip-path: polygon(calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 100%, calc(var(--dot-width) * 4) 100%);
-    opacity: 0;
-  }
-  20% {
-    clip-path: polygon(calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 0, calc(var(--dot-width) * 4) 100%, calc(var(--dot-width) * 4) 100%);
-    opacity: 1;
-  }
-  100% {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-    opacity: 1;
-  }
-}
-
-.clock {
-  font-family: 'Dot Matrix';
-  font-size: 96px;
-  font-weight: 900;
-
-  justify-content: center;
-
-  margin-top: auto;
-
-  height: 112px;
-
-  .char {
-    --width: 1ch;
-    --flip-duration: 0.25s;
-    --step-count: 5;
-
-    width: var(--width);
-    text-align: center;
-    position: relative;
-    height: 1em;
-
-    > .current,
-    > .prev {
-      --dot-height: calc(100% / 9);
-      --dot-width: calc(100% / 8);
-      --dot-width: 12px;
-
-      width: var(--width);
-      position: absolute;
-      top: 0;
-
-      transform: translateZ(0);
-
-      animation-duration: var(--flip-duration);
-      animation-timing-function: steps(var(--step-count), start);
-      // animation-timing-function: linear;
-      animation-fill-mode: forwards;
+.dot-matrix {
+  @keyframes squash-out {
+    0% {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+      opacity: 1;
     }
-
-    > .prev {
-      animation-name: squash-out;
-    }
-
-    > .current {
+    80% {
       clip-path: polygon(
-        0 calc(var(--dot-height) * 4),
-        100% calc(var(--dot-height) * 4),
-        100% calc(var(--dot-height) * 5),
-        0% calc(var(--dot-height) * 5)
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 100%,
+        calc(var(--dot-width) * 4) 100%
+      );
+      opacity: 1;
+    }
+    100% {
+      clip-path: polygon(
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 100%,
+        calc(var(--dot-width) * 4) 100%
       );
       opacity: 0;
-
-      animation-name: squash-in;
-      animation-delay: var(--flip-duration);
     }
+  }
 
-    // Colons are narrower
-    &:nth-child(3n) {
-      --width: 0.4ch;
-      opacity: 1 !important;
+  @keyframes squash-in {
+    0% {
+      clip-path: polygon(
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 100%,
+        calc(var(--dot-width) * 4) 100%
+      );
+      opacity: 0;
+    }
+    20% {
+      clip-path: polygon(
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 0,
+        calc(var(--dot-width) * 4) 100%,
+        calc(var(--dot-width) * 4) 100%
+      );
+      opacity: 1;
+    }
+    100% {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+      opacity: 1;
+    }
+  }
+
+  .clock {
+    font-family: 'Dot Matrix';
+    font-size: 96px;
+    font-weight: 900;
+
+    justify-content: center;
+
+    margin-top: auto;
+
+    height: 112px;
+
+    .char {
+      --width: 1ch;
+      --flip-duration: 0.25s;
+      --step-count: 5;
+
+      width: var(--width);
+      text-align: center;
+      position: relative;
+      height: 1em;
+
+      > .current,
+      > .prev {
+        --dot-height: calc(100% / 9);
+        --dot-width: calc(100% / 8);
+        --dot-width: 12px;
+
+        width: var(--width);
+        position: absolute;
+        top: 0;
+
+        transform: translateZ(0);
+
+        animation-duration: var(--flip-duration);
+        animation-timing-function: steps(var(--step-count), start);
+        // animation-timing-function: linear;
+        animation-fill-mode: forwards;
+      }
+
+      > .prev {
+        animation-name: squash-out;
+      }
+
+      > .current {
+        clip-path: polygon(
+          0 calc(var(--dot-height) * 4),
+          100% calc(var(--dot-height) * 4),
+          100% calc(var(--dot-height) * 5),
+          0% calc(var(--dot-height) * 5)
+        );
+        opacity: 0;
+
+        animation-name: squash-in;
+        animation-delay: var(--flip-duration);
+      }
+
+      // Colons are narrower
+      &:nth-child(3n) {
+        --width: 0.4ch;
+        opacity: 1 !important;
+      }
     }
   }
 }
