--- a/src/components/displays/NewGTR/css/separator.less
+++ b/src/components/displays/NewGTR/css/separator.less
@@ -1,4 +1,4 @@
-.separator {
+.dot-matrix .separator {
   height: 0.3em;
 
   &::after {
