--- a/src/components/displays/NewGTR/css/slideyScrollText.less
+++ b/src/components/displays/NewGTR/css/slideyScrollText.less
@@ -1,4 +1,4 @@
-.slidey-scroll-text {
+.dot-matrix .slidey-scroll-text {
   overflow: hidden;
   white-space: nowrap;
 
