--- a/src/components/displays/NewGTR/css/swapBetween.less
+++ b/src/components/displays/NewGTR/css/swapBetween.less
@@ -1,4 +1,5 @@
-.swapBetween {
+
+.dot-matrix .swapBetween {
   position: relative;
   overflow: hidden;
   height: 1em;
