--- a/src/components/displays/NewGTR/css/trainService.less
+++ b/src/components/displays/NewGTR/css/trainService.less
@@ -5,7 +5,7 @@
   --etd-width: 9.5ch;
 }
 
-.trainService {
+.dot-matrix .trainService {
   display: grid;
 
   height: 1em;
